syntax = "proto3";

package livestock;

message Animal {
  string Id = 1;
  string PartitionKey = 2;
  string animal_id = 3;
  double body_temperature = 4;
  double activity_level = 5;
  double heart_rate = 6;
  double respiration_rate = 7;
  Location location = 8;
  double feed_intake = 9;
  double water_consumption = 10;
  double milk_production = 11;
  double weight = 12;
}

message Location {
  double latitude = 1;
  double longitude = 2;
}

message Animals {
    repeated Animal entries=1;
}
